--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@material/icon-button": "^15.0.0-canary.7f224ddd4.0",
     "express": "^4.19.2",
+    "flowbite": "^2.4.1",
+    "flowbite-angular": "^0.0.2",
     "ngx-logger": "^5.0.12",
     "railway": "^2.0.17",
     "rxjs": "~7.8.0",
