--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "resolveJsonModule":true,
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
@@ -25,7 +26,7 @@
     ]
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
+    "enableI18nLegacyMessageIdFormat": false, 
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
